# xhs-fashion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/skills/xhs-fashion-search/: SKILL.md
.claude/skills/xhs-fashion-search/scripts/: ensure_env.sh  make_collage.py  split_collage.py
docs/: openclaw-setup.md
tests/: test_cli.py  test_fashn_tryon.py  test_make_collage.py  test_runtime.py  test_split_collage.py
xhs-tryon/: README.md  pyproject.toml
xhs-tryon/fashn_tryon/: __init__.py  cli.py  fashn_client.py  image_prep.py  runner.py  store.py
xhs-tryon/tests/: test_fashn_tryon.py
xhs-tryon/xhs_mcp/: __main__.py
xhs_cli/: app.py  runtime.py
