[project]
name = "fashn-tryon"
version = "0.1.1"
description = "AI virtual try-on CLI via FASHN API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=11.0.0",
    "requests>=2.32.3",
]
license = {text = "MIT"}

[project.scripts]
fashn-tryon = "fashn_tryon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fashn_tryon"]
